--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "css:dev": "TAILWIND_MODE=watch postcss ./styles/tailwind.css -o ./styles/globals.css --watch",
+    "css:build": "postcss ./styles/tailwind.css -o ./styles/globals.css",
+    "test": "jest --watch"
   },
   "dependencies": {
     "next": "12.1.0",
@@ -14,10 +17,24 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "autoprefixer": "^10.4.4",
+    "babel-jest": "^27.5.1",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
+    "node-mocks-http": "^1.11.0",
+    "postcss": "^8.4.12",
+    "postcss-cli": "^9.1.0",
+    "tailwindcss": "^3.0.23",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.8",
     "typescript": "4.6.2"
   }
 }
